--- a/src/assets/scss/pages/about/_about.scss
+++ b/src/assets/scss/pages/about/_about.scss
@@ -54,6 +54,8 @@
     &-item {
         &__img {
             margin-right: 49px;
+            width: 240px;
+            height: 240px;
             @media (max-width: 568px) {
                 margin-right: 0;
             }
