--- a/src/assets/scss/components/_slider.scss
+++ b/src/assets/scss/components/_slider.scss
@@ -28,8 +28,6 @@
     &-wrapper {
         height: 100%;
         width: 100%;
-       
-        
     }
     
     &-slide {
@@ -80,13 +78,23 @@
             color: #fff;
         }
     }
+    &-img {
+        img {
+            width: 435px;
+            height: 300px;
+        }
+        p {
+            font-size: 15px;
+        }
+    }
 }
+
 .swiper-slide-active {
     color: #000;
 }
 
 .swiper-slide .swiper-slide-active {
-    box-shadow: #000;
+    box-shadow: 5px 5px 5px 5px #ccc;
 }
 
 
