--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .container{
-    width: 1170px;
+    max-width: 1170px;
     margin: 0 auto;
     overflow: visible;
     // padding: 0 15px;
