--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -32,18 +32,18 @@
     @media (max-width: 568px) {
         .header {
             &__title {
+                text-align: center;
                 width: 100%;
                 &--first {
-                    font-size: 30px;
+                    font-size: 40px;
                 }
                 &--second {
-                    font-size: 30px;
+                    font-size: 40px;
                 }
             }
         }
 
     }
-   
 
 
     &__top {
