--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -25,6 +25,11 @@
             margin-bottom: 0;
             font-size: 25px;
         }
+        @media (max-width: 568px) {
+            text-align: center;
+            font-size: 18px;
+            margin-top: 30px;
+        }
     }
     &.open{
         opacity: 1;
@@ -83,6 +88,10 @@
             padding-top: 15px;
             font-size: 15px;
         }
+        @media (max-width: 568px) {
+            font-size: 12px;
+        }
+
     
     }
     &-link {
