--- a/src/assets/scss/pages/about/_about.scss
+++ b/src/assets/scss/pages/about/_about.scss
@@ -54,8 +54,10 @@
     &-item {
         &__img {
             margin-right: 49px;
-            width: 240px;
-            height: 240px;
+            img {
+                width: 240px;
+                height: 240px;
+            }
             @media (max-width: 568px) {
                 margin-right: 0;
             }
@@ -99,28 +101,29 @@
         justify-content: center;
         flex-basis: 33.3%;
         margin-bottom: 25px;
+        @media (max-width: 992px) {
+            flex-basis: 49.3%;
+        }
+        @media (max-width: 769px) {
+            flex-basis: 50%;
+        }
+        @media (max-width: 600px) {
+            flex-basis: 100%;
+        }
     }
     &__license{
         display: flex;
         flex-wrap: wrap;
         padding: 0 60px 74px;
-        @media (max-width: 1024px) {
-            width: 90%;
-        }
-
         img {
             width: 265px;
             height: 375px;
         }
         @media (max-width: 769px) {
             padding: 0 15px 45px;
-            a {
-                margin-top: 15px;
-                display: flex;
-                flex-basis: 50%;
-            }
         }
-
+        // @media (max-width: 568px) {
+        // }
     }
 
 }
