--- a/src/assets/scss/pages/announ/_announ.scss
+++ b/src/assets/scss/pages/announ/_announ.scss
@@ -6,6 +6,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
+        margin-bottom: 25px;
     }
 
     &-item {
@@ -89,7 +90,7 @@
         align-items: center;
         font-size: 25px;
         font-weight: bold;
-        margin: 20px 0 30px;
+        margin-bottom: 30px;
 
         &__next {
             margin: 0 25px;
@@ -98,9 +99,15 @@
         &__link {
             color: #221F39;
             text-decoration: none;
+            &--center {
+                margin: 0 7px;
+            }
         }
     }
 
+}
+.current {
+    color: #80F1B1;
 }
 
 .page {
