--- a/src/assets/scss/pages/apartment/_apartment.scss
+++ b/src/assets/scss/pages/apartment/_apartment.scss
@@ -45,6 +45,8 @@
     }
     &-block {
         background-color: #f5f5f5;
+        box-shadow: 4px 4px 10px 2px #E0E0E0;
+
         @media (max-width: 769px) {
             display: flex;
             justify-content: center;
@@ -86,6 +88,7 @@
         }
     }
     &-text {
+        display: none;
         padding-bottom: 30px;
         padding-left: 35px;
         font-size: 18px;
@@ -93,10 +96,15 @@
     }
     
         &-content {
+            display: none;
             margin: 0 34px;
             @media (max-width: 769px) {
                 width: 100%;
                 margin: 15px 0;
+            }
+            &__text {
+                margin-top: 25px;
+                line-height: 2.5;
             }
 
             &__title {
@@ -158,10 +166,23 @@
         }
 
         &-passport {
+            margin-top: 37px;
             @media (max-width: 769px) {
                 margin-top: 20px;
             }
         }
+}
+
+
+.active {
+    display: block;
+}
+
+.apartment-content {
+    display: none;
+    &.active {
+        display: block;
+    }
 }
 
 
