--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -148,19 +148,18 @@
     &__title {
         display: flex;
         flex-direction: column;
-        width: 87%;
+        width: 100%;
         font-size: 90px;
         font-weight: 900;
         line-height: .9;
         color: #fff;
-        // margin: 0 auto;
-
+        text-align: center;
         &--first {
             display: block;
         }
         &--second {
             display: block;
-            text-align: right;
+            // text-align: right;
         }
     }
 
