--- a/src/assets/scss/pages/apartment/_apartment.scss
+++ b/src/assets/scss/pages/apartment/_apartment.scss
@@ -70,7 +70,8 @@
             border-radius: 5px;
             transition: .5s all;
             text-align: center;
-            width: 477px;
+            width: 431px;
+            padding: 12px 23px;
             box-shadow: none;
             @media (max-width: 769px) {
                 width: 100%;
