--- a/src/assets/scss/pages/manual/_manual.scss
+++ b/src/assets/scss/pages/manual/_manual.scss
@@ -16,17 +16,16 @@
 
     &-item {
         display: flex;
-        padding: 54px 0 98px;
-        &:first-child {
-            padding: 0;
-        }
+        margin-bottom: 100px;
         @media (max-width: 769px) {
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
+            margin-bottom: 50px;
         }
         @media (max-width: 568px) {
             padding-bottom: 10px;
+            margin-bottom: 30px;
         }
     }
     &-content {
@@ -42,7 +41,10 @@
             font-weight: bold;
             color: #221F39;
             margin-bottom: 5px;
-            // margin-top: 20px;
+            @media (max-width: 769px) {
+                margin-top: 20px;
+            }
+
 
         }
         &__subtitle {
