--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -19,6 +19,7 @@
   @import "components/slider";
   @import "components/modal";
   @import "components/range";
+  @import "components/search";
   @import "pages/register/register";
   @import "pages/verify/verify";
   @import "pages/office/office";
