--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -21,10 +21,12 @@ body {
     }
 }
 
+
 /* ------------nav background Color--------- */
 .black {
     color: #000;
     border: 1px solid #000 !important;
+    background: none;
 }
 .white {
     color: #fff;
