--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -61,7 +61,7 @@
     &--calmodal2 {
         position: fixed;
         width: 590px;
-        height: 510px;
+        height: 570px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -75,8 +75,30 @@
             height: 100%;
         }
     }
+    &--registermodal {
+        position: fixed;
+        width: 590px;
+        height: 550px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 9;
+        opacity: 1;
+        @media (max-width: 769px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
+    }
     &-title {
         margin: 40px 0 10px;
+        &--register {
+            font-size: 22px;
+            margin: 0;
+            margin-top: 16px;
+        }
     }
 
     &__group {
@@ -211,10 +233,18 @@
 }
 
 
+
+
 .modalBtn {
     color: #fff;
     text-decoration: none;
     text-align: center;
     max-width: 400px;
+    // margin: auto;
+    // transform: translate(-50%, -50%);
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
 }
+
 
