--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -74,6 +74,7 @@
             width: 100%;
             height: 100%;
         }
+       
     }
     &--registermodal {
         position: fixed;
@@ -84,13 +85,33 @@
         transform: translate(-50%, -50%);
         z-index: 9;
         opacity: 1;
+        @media (max-width: 992px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 50%;
+            height: 60%;
+            padding: 15px;
+          
+        }
         @media (max-width: 769px) {
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 100%;
-            height: 100%;
+            width: 60%;
+            height: 60%;
         }
+        @media (max-width: 568px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 50%;
+            height: 50%;
+        }
+        @media (max-width: 465px) {
+            width: 80%;
+        }
+
     }
     &-title {
         margin: 40px 0 10px;
@@ -235,6 +256,7 @@
 
 
 
+
 .modalBtn {
     color: #fff;
     text-decoration: none;
@@ -245,6 +267,18 @@
     // position: absolute;
     // top: 50%;
     // left: 50%;
+}
+.modal-content {
+    padding: 30px 0;
+    margin: 0 auto;
+    max-width: 500px;
+    overflow-y: scroll;
+    max-height: 410px;
+    line-height: 25px;
+    @media (max-width: 465px) {
+        padding: 0;
+        margin: 0;
+    }
 }
 
 
