--- a/src/assets/scss/pages/calculator/_decor.scss
+++ b/src/assets/scss/pages/calculator/_decor.scss
@@ -165,6 +165,9 @@ input[type="checkbox"]:checked + label:after {
 .select-box1 {
     background: #fff;
 }
+.select-box2 {
+    background: #e6e6e6;
+}
 
 .label {
     position: relative;
@@ -195,3 +198,11 @@ input[type="checkbox"]:checked + label:after {
     width: 100%;   
 }
 
+#registerDone {
+    margin-top: 35px;
+    width: 300px;
+    @media (max-width: 568px) {
+        width: 150px;
+        font-size: 12px;
+    }
+}
