--- a/src/assets/scss/pages/cabinet/_cabinet.scss
+++ b/src/assets/scss/pages/cabinet/_cabinet.scss
@@ -300,3 +300,23 @@
         display: block;
     }
 }
+
+.file__img1 {
+    width: 145px;
+    height: 145px;
+    border-radius: 4px;
+}
+.addimg {
+    &-title {
+       font-size: 20px;
+       width: 140px;
+       margin-bottom: 4px;
+       text-align: center;
+    }
+    // &-input {
+    //     display: none;
+    // }
+}
+
+
+
